--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -29,6 +29,17 @@ android {
             exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk8'
         }
     }
+
+    compileOptions {
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    java {
+        toolchain {
+            languageVersion = JavaLanguageVersion.of(17)
+        }
+    }
 }
 
 repositories {
